/** https://www.cnblogs.com/liugh/p/7505533.html */
syntax = "proto3";
package jobInvokingService;
option java_package = "com.sse.atemper.grpc.invoking";
option java_outer_classname = "JobInvokingProto";

/**
* request from web/scheduler side to executor side
*/
message JobInvokingRequest {
    //sequence number
    string id = 1;
    //job name
    string jobName = 2;
    //trigger name
    string triggerName = 3;
    //tenant id
    string tenantId = 4;
}

/**
* reponse from executor side to web/scheduler side
*/
message JobInvokingResponse {
    //sequence number
    string id = 1;

    int32 code = 2;

    string msg = 3;
}

/**
 * job invoking servie
 */
service JobInvokingService {

    rpc invoke (JobInvokingRequest) returns (JobInvokingResponse);
}